--- a/dev-workflow-ui/webContent/view/webservices.xhtml
+++ b/dev-workflow-ui/webContent/view/webservices.xhtml
@@ -6,7 +6,7 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotDevModeOrAdmin}" />
+      <f:event type="preRenderView" listener="#{loginBean.redirectIfNotDevModeOrAdmin}" />
 
       <h:form id="webServicesForm">
         <p:growl id="growl" showDetail="true" />
