--- a/dev-workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/caseMap.xhtml
@@ -4,8 +4,8 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
   <div class="flex justify-content-center height-100">
-    <h:panelGroup layout="block" styleClass="case-map-container" rendered="#{not empty casesDetailsIvyDevWfBean.getCaseMap().stages}">
-      <ui:repeat var="stage" value="#{casesDetailsIvyDevWfBean.getCaseMap().stages}" varStatus="count">
+    <h:panelGroup layout="block" styleClass="case-map-container" rendered="#{not empty casesDetailsBean.getCaseMap().stages}">
+      <ui:repeat var="stage" value="#{casesDetailsBean.getCaseMap().stages}" varStatus="count">
         <h:panelGroup styleClass="case-map-column">
           <div class="case-map-icon-container">
             <i class="case-map-icon #{stage.iconCss} #{stage.stateCss}" />
@@ -24,7 +24,7 @@
         </h:panelGroup>
       </ui:repeat>
     </h:panelGroup>
-    <c:if test="#{empty casesDetailsIvyDevWfBean.getCaseMap().stages}">
+    <c:if test="#{empty casesDetailsBean.getCaseMap().stages}">
       <i class="si si-road-sign-warning mr-1"/>
       <h:outputText value="No Case Map found." />
     </c:if>
