--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -4,7 +4,7 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
-  <c:set var="case" value="#{casesDetailsIvyDevWfBean.selectedCaseModel}" />
+  <c:set var="case" value="#{casesDetailsBean.selectedCaseModel}" />
 
   <p:panelGrid id="caseDetails" columns="4" layout="flex" contentStyleClass="align-items-center"
     columnClasses="details-description-label col-6 md:col-2, col-6 md:col-4,
@@ -35,7 +35,7 @@
     <jc:datetime datetime="#{case.endTimestamp}" id="expiryDate" />
 
     <h:outputText value="Description" />
-    <h:outputText value="#{casesDetailsIvyDevWfBean.description}" id="caseDescription" />
+    <h:outputText value="#{casesDetailsBean.description}" id="caseDescription" />
   </p:panelGrid>
   <p:tooltip for="caseId" value="ID: #{case.id}" />
 
