--- a/dev-workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/signals/firedSignals.xhtml
@@ -4,7 +4,7 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
-  <p:dataTable id="firedSignalsTable" var="signal" value="#{signalsIvyDevWfBean.signalsModel}"
+  <p:dataTable id="firedSignalsTable" var="signal" value="#{signalsBean.signalsModel}"
     rows="10" paginator="true" paginatorAlwaysVisible="false" lazy="true" paginatorPosition="bottom">
     <p:column headerText="Code" sortBy="#{signal.signalCode}" width="100">
       <h:outputText value="#{signal.signalCode}" />
