--- a/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/taskDetails/description.xhtml
@@ -4,7 +4,7 @@
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
-  <c:set var="task" value="#{tasksDetailsIvyDevWfBean.selectedTask}" />
+  <c:set var="task" value="#{tasksDetailsBean.selectedTask}" />
 
   <p:panelGrid id="taskDetail" layout="flex" columns="4" contentStyleClass="align-items-center"
     columnClasses="details-description-label flex align-items-center col-6 md:col-2, flex align-items-center col-6 md:col-4,
@@ -67,7 +67,7 @@
 
     <h:outputText value="Current Element" />
     <p:commandLink id="openProcessViewerBtn" styleClass="flex align-items-center"
-      actionListener="#{tasksDetailsIvyDevWfBean.setViewerLink()}" oncomplete="PF('process-viewer-dlg').show()"
+      actionListener="#{tasksDetailsBean.setViewerLink()}" oncomplete="PF('process-viewer-dlg').show()"
       update="processViewer:processViewerDialog"
       disabled="#{!task.viewerAllowed}">
       <i class="si si-hierarchy-6 si-rotate-270 mr-1" />
