--- a/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userDetails/userdetail-usertasks.xhtml
@@ -39,7 +39,7 @@
             style="width: 200px">
             <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
               icon="si si-information-circle" />
-            <p:menuitem value="Start task" actionListener="#{homepageIvyDevWfBean.executeTask(task)}"
+            <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}"
               id="startTaskBtn" icon="si si-controls-play" disabled="#{!task.canBeStarted()}"/>
           </p:menu>
         </p:column>
