--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -57,31 +57,31 @@
                   <i class="si si-single-neutral-circle" style="font-size: 28px; padding: 2px;"></i>
                 </span>
                 <span id="sessionUserName" class="topbar-item-name profile-name">
-                  <span>#{userIvyDevWfBean.currentUserName}</span>
+                  <span>#{userBean.currentUserName}</span>
                 </span>
               </a>
               <ul>
                 <li>
-                  <p:link id="profileBtn" outcome="profile.xhtml" rendered="#{loginIvyDevWfBean.loggedIn}">
+                  <p:link id="profileBtn" outcome="profile.xhtml" rendered="#{loginBean.loggedIn}">
                     <i class="si si-lg si-single-neutral-circle"></i>
                     <span>Profile</span>
                   </p:link>
                 </li>
                 <li jsf:rendered="#{permissionsBean.demoOrDevMode}">
-                  <p:link id="loginTableBtn" href="loginTable.xhtml?originalUrl=#{loginIvyDevWfBean.originalPage}">
+                  <p:link id="loginTableBtn" href="loginTable.xhtml?originalUrl=#{loginBean.originalPage}">
                     <i class="si si-lg si-multiple-neutral-1"></i>
                     <span>Switch user</span>
                   </p:link>
                 </li>
                 <li>
-                  <p:link id="loginFormBtn" href="login.xhtml?originalUrl=#{loginIvyDevWfBean.originalPage}">
+                  <p:link id="loginFormBtn" href="login.xhtml?originalUrl=#{loginBean.originalPage}">
                     <i class="si si-lg si-login-3"></i>
                     <span>Login</span>
                   </p:link>
                 </li>
                 <li>
-                  <p:commandLink id="sessionLogoutBtn" actionListener="#{loginIvyDevWfBean.logout}"
-                    rendered="#{!userIvyDevWfBean.sessionUserUnknown}">
+                  <p:commandLink id="sessionLogoutBtn" actionListener="#{loginBean.logout}"
+                    rendered="#{!userBean.sessionUserUnknown}">
                     <i class="si si-lg si-logout-1"></i><span>Logout</span>
                   </p:commandLink>
                 </li>
