--- a/dev-workflow-ui/webContent/resources/components/user.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/user.xhtml
@@ -7,7 +7,7 @@
 </cc:interface>
 
 <cc:implementation>
-  <ui:param name="userModel" value="#{userComponentIvyDevWfBean.toComponentModel(cc.attrs.user)}" />
+  <ui:param name="userModel" value="#{userComponentBean.toComponentModel(cc.attrs.user)}" />
   <h:panelGroup styleClass="flex align-items-center">
     <h:panelGroup rendered="#{not empty userModel.name}">
       <i class="mr-1 si-lg #{userModel.cssIcon}" />
