--- a/dev-workflow-ui/webContent/view/home.xhtml
+++ b/dev-workflow-ui/webContent/view/home.xhtml
@@ -6,19 +6,19 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
+      <f:event type="preRenderView" listener="#{loginBean.redirectIfNotLoggedIn}" />
 
       <div class="layout-dashboard">
-        <h:panelGroup styleClass="grid" layout="block" rendered="#{loginIvyDevWfBean.loggedIn}">
+        <h:panelGroup styleClass="grid" layout="block" rendered="#{loginBean.loggedIn}">
           <div class="col-12 lg:col-5">
             <div class="card flex flex-column startedProcessesCard">
               <div class="card-header">
                 <h4 class="m-0">Started Processes</h4>
               </div>
-              <p:dataTable id="startedProcesses" var="start" value="#{homepageIvyDevWfBean.lastStarts}" selectionMode="single"
+              <p:dataTable id="startedProcesses" var="start" value="#{homepageBean.lastStarts}" selectionMode="single"
                 rowKey="#{start.displayName}" rows="10" styleClass="table-header-none"
-                rendered="#{not empty homepageIvyDevWfBean.lastStarts}">
-                <p:ajax event="rowSelect" listener="#{homepageIvyDevWfBean.executeLastStart}" />
+                rendered="#{not empty homepageBean.lastStarts}">
+                <p:ajax event="rowSelect" listener="#{homepageBean.executeLastStart}" />
                 <p:column styleClass="startedProcessElement flex justify-content-between align-items-center">
                   <h:panelGroup id="startedProcess" styleClass="flex align-items-center">
                     <i class="#{start.icon} mr-3" />
@@ -40,13 +40,13 @@
                       <p:menuitem id="openProcessViewer"
                         value="#{start.isProcessStart() ? 'Open Process Viewer' : 'Open Case Map Viewer'}"
                         oncomplete="PF('process-viewer-dlg').show()" update="processViewer:processViewerDialog"
-                        actionListener="#{homepageIvyDevWfBean.setViewerStart(start.viewerLink)}"
+                        actionListener="#{homepageBean.setViewerStart(start.viewerLink)}"
                         rendered="#{start.viewerAllowed}" icon="si si-hierarchy-6 si-rotate-270" />
                     </p:menu>
                   </h:panelGroup>
                 </p:column>
               </p:dataTable>
-              <h:panelGroup rendered="#{empty homepageIvyDevWfBean.lastStarts}" layout="block"
+              <h:panelGroup rendered="#{empty homepageBean.lastStarts}" layout="block"
                 styleClass="flex flex-column justify-content-center align-items-center gap-4">
                 <i class="si si-hierarchy-6 si-rotate-270 text-4xl" />
                 <span style="text-align: center; text-wrap: balance;">
@@ -61,10 +61,10 @@
               <div class="card-header">
                 <h4 class="m-0">Open Tasks</h4>
               </div>
-              <p:dataTable id="activeTasks" var="task" value="#{homepageIvyDevWfBean.tasksDataModel}" lazy="true"
+              <p:dataTable id="activeTasks" var="task" value="#{homepageBean.tasksDataModel}" lazy="true"
                 rows="6" paginator="true" paginatorAlwaysVisible="false" resizableColumns="true"
-                rendered="#{homepageIvyDevWfBean.tasksDataModel.size gt 0}" paginatorPosition="bottom" selectionMode="single">
-                <p:ajax event="rowSelect" listener="#{homepageIvyDevWfBean.executeTaskRow}" />
+                rendered="#{homepageBean.tasksDataModel.size gt 0}" paginatorPosition="bottom" selectionMode="single">
+                <p:ajax event="rowSelect" listener="#{homepageBean.executeTaskRow}" />
                 <p:column headerText="Prio" sortBy="#{task.priority}" styleClass="center-table-cell" width="50px" resizable="false">
                   <h:outputText id="taskPrio" styleClass="si text-800 si-#{task.priorityIcon}" />
                   <p:tooltip for="taskPrio" value="Priority: #{task.priority}" position="top" />
@@ -81,14 +81,14 @@
                     styleClass="ui-button-flat text-color action-button" />
                   <p:menu id="taskActionsMenu" overlay="true" trigger="taskActionsBtn" my="right top" at="right bottom"
                     style="width: 200px">
-                    <p:menuitem value="Start task" actionListener="#{homepageIvyDevWfBean.executeTask(task)}"
+                    <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}"
                       id="startTaskBtn" icon="si si-controls-play" />
                     <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
                       icon="si si-information-circle" />
                   </p:menu>
                 </p:column>
               </p:dataTable>
-              <h:panelGroup rendered="#{homepageIvyDevWfBean.tasksDataModel.size eq 0}" layout="block"
+              <h:panelGroup rendered="#{homepageBean.tasksDataModel.size eq 0}" layout="block"
                 styleClass="flex flex-column justify-content-center align-items-center gap-4">
                 <i class="si si-list-bullets text-4xl" />
                 <span style="text-align: center; text-wrap: balance;">You don't have any active tasks.<br />Go take a coffee break</span>
@@ -101,10 +101,10 @@
               <div class="card-header">
                 <h4 class="m-0">Started Cases</h4>
               </div>
-              <p:dataTable id="startedCases" var="case" value="#{homepageIvyDevWfBean.startedCasesDataModel}"
+              <p:dataTable id="startedCases" var="case" value="#{homepageBean.startedCasesDataModel}"
                 widgetVar="casesTable" emptyMessage="No Cases found with given criteria" paginatorPosition="bottom"
                 rows="6" lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
-                <p:ajax event="rowSelect" listener="#{casesIvyDevWfBean.redirectToCaseRow}" />
+                <p:ajax event="rowSelect" listener="#{casesBean.redirectToCaseRow}" />
 
                 <p:column headerText="State" filterBy="#{case.businessState}" sortBy="#{case.businessState}"
                   width="90px" resizable="false">
@@ -112,7 +112,7 @@
                 </p:column>
 
                 <p:column headerText="Name" filterBy="#{case.getName(case)}" sortBy="#{case.name}">
-                  <h:outputText id="caseName" value="#{casesIvyDevWfBean.getName(case)}" />
+                  <h:outputText id="caseName" value="#{casesBean.getName(case)}" />
                 </p:column>
 
                 <p:column headerText="Start" sortBy="#{case.startTimestamp}" responsivePriority="2"
@@ -131,7 +131,7 @@
                     at="right bottom" style="width: 200px">
                     <p:menuitem id="openCaseDetailsBtn" value="Open case details"
                       url="#{case.detailLink}" icon="si si-information-circle" />
-                    <p:menuitem value="Rerun process" actionListener="#{casesIvyDevWfBean.rerunProcess(case)}"
+                    <p:menuitem value="Rerun process" actionListener="#{casesBean.rerunProcess(case)}"
                       id="rerunCaseProcessBtn" icon="si si-button-refresh-arrow" />
                   </p:menu>
                 </p:column>
@@ -141,8 +141,8 @@
         </h:panelGroup>
       </div>
 
-      <jc:processViewer id="processViewer" title="#{homepageIvyDevWfBean.viewerTitle}"
-        link="#{homepageIvyDevWfBean.viewerLink}" />
+      <jc:processViewer id="processViewer" title="#{homepageBean.viewerTitle}"
+        link="#{homepageBean.viewerLink}" />
     </ui:define>
   </ui:composition>
 </h:body>
