--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -5,20 +5,20 @@
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
-      <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
+      <f:event type="preRenderView" listener="#{loginBean.redirectIfNotLoggedIn}" />
       <h:form id="tasksForm">
         <div class="card">
-          <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable"
+          <p:dataTable id="tasks" var="task" value="#{tasksBean.tasksDataModel}" widgetVar="tasksTable"
             styleClass="ui-fluid" emptyMessage="No Tasks found with given criteria" paginatorPosition="bottom" rows="10"
             lazy="true" paginator="true" paginatorAlwaysVisible="false" selectionMode="single" resizableColumns="true">
-            <p:ajax event="rowSelect" listener="#{tasksIvyDevWfBean.displayTaskRow}" />
+            <p:ajax event="rowSelect" listener="#{tasksBean.displayTaskRow}" />
             <f:facet name="header">
               <div class="flex justify-content-between mb-3 pretty-search">
                 <h4 class="m-0">Tasks</h4>
                 <h:panelGroup id="showAllTasksSwitch_container" styleClass="ml-auto inline-flex align-items-center"
                   layout="block" rendered="#{permissionsBean.admin}">
                   <h:outputText value="Show all" styleClass="mr-2" />
-                  <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksIvyDevWfBean.tasksDataModel.showAll}"
+                  <p:toggleSwitch id="showAllTasksSwitch" value="#{tasksBean.tasksDataModel.showAll}"
                     disabled="#{!permissionsBean.admin}">
                     <p:ajax update="tasksForm" />
                   </p:toggleSwitch>
@@ -27,7 +27,7 @@
                   value="If enabled shows all tasks, even the ones the user is not involved in" />
                 <div class="ui-input-icon-left filter-container ml-3">
                   <i class="pi pi-search" />
-                  <p:inputText id="globalFilter" placeholder="Search" value="#{tasksIvyDevWfBean.tasksDataModel.filter}"
+                  <p:inputText id="globalFilter" placeholder="Search" value="#{tasksBean.tasksDataModel.filter}"
                     onkeyup="PF('tasksTable').filter()" />
                 </div>
               </div>
@@ -81,7 +81,7 @@
                 style="width: 200px">
                 <p:menuitem id="openTaskDetailsBtn" value="Open task details" url="#{task.detailUrl}"
                   icon="si si-information-circle" />
-                <p:menuitem value="Start task" actionListener="#{homepageIvyDevWfBean.executeTask(task)}"
+                <p:menuitem value="Start task" actionListener="#{homepageBean.executeTask(task)}"
                   id="startTaskBtn" icon="si si-controls-play" disabled="#{!task.canBeStarted()}"/>
               </p:menu>
             </p:column>
